# Fractalls

./: .gitignore  CMakeLists.txt
include/: AppManager.h  BlockScheduler.h  ConstDefine.h  MainWindow.h  complex.h
source/: AppManager.cpp  BigDouble.cpp  BlockScheduler.cpp  FractallRender.cpp  MainWindow.cpp  WinMain.cpp  complex.cpp
